--- a/wp-content/themes/govintranetpress/scss/shared/_message.scss
+++ b/wp-content/themes/govintranetpress/scss/shared/_message.scss
@@ -34,6 +34,8 @@
     text-shadow: none;
     font-weight: normal;
     font-size: 24px;
+    cursor: pointer;
+    z-index: 1;
   }
 }
 
